log
Thu 28 Sep 2023 07:14:35 PM UTC: 
 tests:  0|4
total_score: 0/70
5b483ca
Thu 28 Sep 2023 07:17:59 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   36 |   Heap *nuevo = (Heap*) malloc(sizeof(Heap));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1c76bf4
Thu 28 Sep 2023 07:20:41 PM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
ab2d86c
Thu 28 Sep 2023 07:22:31 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
0a0990f
Thu 28 Sep 2023 07:25:14 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
be8d235
Thu 28 Sep 2023 07:27:19 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fd45918
Thu 28 Sep 2023 07:29:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:22: error: ‘capac’ undeclared (first use in this function)
   37 |   for(int i = 0; i < capac; i++){
      |                      ^~~~~
heap.c:37:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
397e393
Thu 28 Sep 2023 07:30:04 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:22: error: ‘capac’ undeclared (first use in this function)
   39 |   for(int i = 0; i < capac; i++){
      |                      ^~~~~
heap.c:39:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
19176ce
Thu 28 Sep 2023 07:30:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:10: error: ‘*nuevo.heapArray’ is used uninitialized [-Werror=uninitialized]
   40 |     nuevo->heapArray[i].data = NULL;
      |     ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6a8b0d5
Thu 28 Sep 2023 07:30:37 PM UTC: 
 heap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
a96d01e
Thu 28 Sep 2023 07:31:09 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
69c38f4
Thu 28 Sep 2023 07:31:48 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:10: error: ‘*nuevo.heapArray’ is used uninitialized [-Werror=uninitialized]
   40 |     nuevo->heapArray[i].data = NULL;
      |     ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
954f5b0
Thu 28 Sep 2023 07:32:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:10: error: ‘*nuevo.heapArray’ is used uninitialized [-Werror=uninitialized]
   41 |     nuevo->heapArray[i].priority = 0;
      |     ~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5d18bdf
Thu 28 Sep 2023 07:34:28 PM UTC: 
 heap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|3
total_score: 10/70
414f913
Thu 28 Sep 2023 07:38:11 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d6aee3c
Thu 28 Sep 2023 07:43:58 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|2
total_score: 20/70
f2337af
Fri 13 Oct 2023 05:01:52 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   30 |     if(pq->size)
      |     ^~
heap.c:32:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   32 |       pq->heapArray[pq->size + 1].priority = priority;
      |       ^~
cc1: all warnings being treated as errors
Compilation failed
53f6a28
